Replace deprecated constructor for URL